--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
-    "vue-awesome-swiper": "^4.1.1",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "postcss-px2rem-exclude": "^0.0.6",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
