--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "build": "vue-cli-service build --report"
   },
   "dependencies": {
-    "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.21",
-    "postcss-px2rem-exclude": "^0.0.6",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
@@ -22,6 +19,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "webpack": "^4.23.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
